website/versioned_docs/version-0.26.0/enterprise/getting-started/intro-enterprise.mdx
---
title: Introduction to Flux-GUI Enterprise
hide_title: true
---
import TierLabel from "../../_components/TierLabel";
import Link from "@docusaurus/Link";

# Flux-GUI Enterprise <TierLabel tiers="Enterprise" />

:::tip Ready for more GitOps?
To purchase an entitlement to Flux-GUI Enterprise, please contact [info@weaveworks.org](mailto:info@weaveworks.org).
:::

Flux-GUI Enterprise provides ops teams with an easy way to assess the
health of multiple clusters in a single place. It shows cluster information such as
Kubernetes version and number of nodes and provides details about the GitOps operations
on those clusters, such as Git repositories and recent commits. Additionally, it
aggregates Prometheus alerts to assist with troubleshooting.

If you have already purchased your entitlement, head to the [installation page](./install-enterprise.mdx).

## Feature Breakdown

In addition to the features in the OSS edition, Flux-GUI Enterprise
offers the following capabilities, taking your delivery from simple Continuous Delivery to Internal Developer Platform:

### :boat: [Cluster Fleet Management](../../cluster-management/intro.mdx)
Deploy the same application into many different clusters across
cloud and hybrid environments. Simplify the lifecycle management of your clusters declaratively via GitOps. WGE can provision Kubernetes clusters using any of the CAPI providers installed and provides both a Web UI and a CLI to interact with and manage these clusters.

### :closed_lock_with_key: [Trusted Application Delivery](../../policy/intro.mdx)
Add policy as code to GitOps pipelines and enforce security and compliance,
application resilience and coding standards from source to production.
Validate policy conformance at every step in the software delivery pipeline:
commit, build, deploy and run time.

### :truck: [Progressive Delivery](../../guides/delivery.mdx)
Deploy into production environments safely using canary, blue/green deployment, and A/B
strategies. Simple, single-file configuration defines success rollback. Measure Service Level Objectives (SLOs)
using observability metrics from Prometheus, Datadog, New Relic, and others.

### :infinity: [CD Pipelines](../../pipelines/intro.mdx)
Rollout new software from development to production.
Environment rollouts that work with your existing CI system.

### :factory_worker: [Team Workspaces](../../workspaces/intro.mdx)
Allow DevOps teams to work seamlessly together with multi-tenancy,
total RBAC control, and policy enforcement, with integration to enterprise IAM.

### :point_up_2: [Self-Service Templates and Profiles](../../gitops-templates/intro.mdx)
Component profiles enable teams to deploy standard services quickly,
consistently and reliably. Teams can curate the profiles that are available
within their estate ensuring there is consistency everywhere. Using GitOps
it's easy to guarantee the latest, secure versions of any component are
deployed in all production systems.

### :sparkling_heart: Health Status and Compliance Dashboards
Gain a single view of the health and state of the cluster and its workloads.
Monitor deployments and alert on policy violations across apps and clusters.

### :compass: Kubernetes Anywhere
Reduce complexity with GitOps and install across all major target environments
including support for on-premise, edge, hybrid, and multi-cloud Kubernetes clusters.

### :bell: [Critical 24/7 Support](/help-and-support/)
Your business and workloads operate around the clock, and so do we.
Whenever you have a problem, our experts are there to help. We’ve got your back!
